[gd_scene load_steps=18 format=3 uid="uid://t41eq0yiueh3"]

[ext_resource type="Texture2D" uid="uid://b5k2qgih6jt08" path="res://Sprites/parallaxLayer2.png" id="1_6mbmp"]
[ext_resource type="Texture2D" uid="uid://cavckkhgktaq5" path="res://Sprites/backOfTheGround.png" id="1_7x8kw"]
[ext_resource type="Texture2D" uid="uid://idaf2csai4ga" path="res://Sprites/parallaxLayer1.png" id="1_47ydw"]
[ext_resource type="Shader" path="res://testShder.gdshader" id="1_bq86h"]
[ext_resource type="Script" path="res://apartment_scene_main.gd" id="1_ktjcr"]
[ext_resource type="Texture2D" uid="uid://svrpyou7yb0n" path="res://Sprites/parallaxLayer4.png" id="1_oaeva"]
[ext_resource type="Texture2D" uid="uid://cumefru27caqe" path="res://Sprites/parallaxLayer3.png" id="1_tpd6x"]
[ext_resource type="PackedScene" uid="uid://dvls4jsm2r1jn" path="res://character_non_action.tscn" id="2_n8285"]
[ext_resource type="Texture2D" uid="uid://b1il2iksblyoj" path="res://Sprites/kitchen.png" id="3_7gf22"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_07nct"]
shader = ExtResource("1_bq86h")
shader_parameter/brightness = 0.0
shader_parameter/contrast = 1.0
shader_parameter/saturation = 1.0
shader_parameter/redVal = 1.0
shader_parameter/greenVal = 1.0
shader_parameter/blueVal = 1.0
shader_parameter/tint_color = Color(1, 1, 1, 1)
shader_parameter/tint_effect_factor = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s322w"]
size = Vector2(682, 94)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nrkk"]
size = Vector2(14, 298)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1pvy"]
size = Vector2(668, 178)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_36lr2"]
size = Vector2(17, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2wpk"]
size = Vector2(214, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1hj2"]
size = Vector2(415, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43as0"]
size = Vector2(1, 120)

[node name="ApartmentSceneMain" type="Node2D"]
texture_filter = 1
material = SubResource("ShaderMaterial_07nct")
script = ExtResource("1_ktjcr")

[node name="Parallaxex" type="Node2D" parent="."]
texture_filter = 1
use_parent_material = true

[node name="Parallax5" type="Parallax2D" parent="Parallaxex"]
scroll_scale = Vector2(0.1, 1)
repeat_size = Vector2(480, 0)
repeat_times = 6

[node name="Sprite2D" type="Sprite2D" parent="Parallaxex/Parallax5"]
texture = ExtResource("1_7x8kw")

[node name="Parallax4" type="Parallax2D" parent="Parallaxex"]
scroll_scale = Vector2(0.2, 1)
repeat_size = Vector2(480, 0)
repeat_times = 6

[node name="Sprite2D" type="Sprite2D" parent="Parallaxex/Parallax4"]
position = Vector2(-198, 94)
texture = ExtResource("1_oaeva")

[node name="Parallax3" type="Parallax2D" parent="Parallaxex"]
scroll_scale = Vector2(0.3, 1)
repeat_size = Vector2(480, 0)
repeat_times = 6

[node name="Sprite2D" type="Sprite2D" parent="Parallaxex/Parallax3"]
position = Vector2(-198, 94)
texture = ExtResource("1_tpd6x")

[node name="Parallax2" type="Parallax2D" parent="Parallaxex"]
scroll_scale = Vector2(0.4, 1)
repeat_size = Vector2(480, 0)
repeat_times = 6

[node name="Sprite2D" type="Sprite2D" parent="Parallaxex/Parallax2"]
position = Vector2(-198, 94)
texture = ExtResource("1_6mbmp")

[node name="Parallax1" type="Parallax2D" parent="Parallaxex"]
texture_filter = 1
scroll_scale = Vector2(0.5, 1)
repeat_size = Vector2(480, 0)
repeat_times = 6

[node name="Sprite2D" type="Sprite2D" parent="Parallaxex/Parallax1"]
position = Vector2(-198, 94)
texture = ExtResource("1_47ydw")

[node name="Sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(0, -30)
texture = ExtResource("3_7gf22")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-107, 149)
shape = SubResource("RectangleShape2D_s322w")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-441, -47)
shape = SubResource("RectangleShape2D_7nrkk")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-100, -107)
shape = SubResource("RectangleShape2D_p1pvy")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(225.5, 42)
shape = SubResource("RectangleShape2D_36lr2")

[node name="CharacterNonAction" parent="." instance=ExtResource("2_n8285")]
use_parent_material = true
position = Vector2(-337, 73)

[node name="cam" type="Camera2D" parent="."]
position = Vector2(-12, 24)

[node name="kitchenArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="kitchenArea"]
position = Vector2(-305, 42)
shape = SubResource("RectangleShape2D_r2wpk")

[node name="corridoorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="corridoorArea"]
position = Vector2(9.5, 42)
shape = SubResource("RectangleShape2D_c1hj2")

[node name="windowArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="windowArea"]
position = Vector2(-429.5, 42)
shape = SubResource("RectangleShape2D_43as0")

[connection signal="body_entered" from="kitchenArea" to="." method="_on_kitchen_area_body_entered"]
[connection signal="body_exited" from="kitchenArea" to="." method="_on_kitchen_area_body_exited"]
[connection signal="body_entered" from="corridoorArea" to="." method="_on_corridoor_area_body_entered"]
[connection signal="body_exited" from="corridoorArea" to="." method="_on_corridoor_area_body_exited"]
[connection signal="body_entered" from="windowArea" to="." method="_on_window_area_body_entered"]
[connection signal="body_exited" from="windowArea" to="." method="_on_window_area_body_exited"]
